@@ -4,6 +4,8 @@ ikiwiki (3.20120203) UNRELEASED; urgency=low
   * openid-jquery.js: Update URL of Wordpress favicon. Closes: #660549
   * Drop the version attribute on the generator tag in Atom feeds
     to make builds more reproducible. Closes: #661569 (Paul Wise)
+  * shortcut: Support Wikipedia's form of url-encoding for unicode
+    characters, which involves mojibake. Closes: #661198
 
  -- Joey Hess <joeyh@debian.org>  Wed, 08 Feb 2012 16:07:00 -0400
 
